--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -32,3 +32,11 @@ jobs:
             ${{ secrets.DOCKER_REGISTRY }}/dockerhub/build/vrcd-rak-profile:${{ github.sha }}
           build-args: |
             NODE_ENV=production
+
+      - name: Update Deployment Image Tag in Kubernetes (Kuboard)
+        run: |
+          curl -X PUT \
+            -H "content-type: application/json" \
+            -H "Cookie: KuboardUsername=${{ secrets.KUBOARD_USERNAME }}; KuboardAccessKey=${{ secrets.KUBOARD_ACCESS_KEY }}" \
+            -d '{"kind":"deployments","namespace":"dev","name":"vrcd-rak-profile","images":{"${{ secrets.DOCKER_REGISTRY }}/dockerhub/build/vrcd-rak-profile":"${{ secrets.DOCKER_REGISTRY }}/dockerhub/build/vrcd-rak-profile:${{ github.sha }}"}}' \
+            "${{ secrets.KUBOARD_API_URL }}"
