--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.5.0",
     "gray-matter": "^4.0.3",
     "knex": "^3.1.0",
     "lucide-react": "^0.482.0",
@@ -36,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.1",
