--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
