--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:diff": "prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-url=$DATABASE_URL --script"
+    "db:diff": "prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-url=$DATABASE_URL --script",
+    "db:dev": "prisma migrate dev --name "
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
@@ -27,6 +28,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/mdx": "^2.0.13",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
