--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=--require=elastic-apm-node/start-next.js next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env NODE_OPTIONS=--require=elastic-apm-node/start-next.js next start",
     "lint": "next lint",
     "db:diff": "prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-url=$DATABASE_URL --script",
     "db:dev": "prisma migrate dev --name "
@@ -18,6 +18,7 @@
     "@next/mdx": "^15.2.3",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^2.0.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -33,7 +34,10 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^10.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
+    "elastic-apm-node": "^4.13.0",
     "framer-motion": "^12.23.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.539.0",
