--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--require=elastic-apm-node/start-next.js next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "cross-env NODE_OPTIONS=--require=elastic-apm-node/start-next.js next start",
     "lint": "next lint",
