--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,6 @@ jobs:
           registry: fox-su-docker.pkg.coding.net
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -32,3 +31,11 @@ jobs:
             ${{ secrets.DOCKER_REGISTRY }}/build/vrcd-rak-profile:${{ github.sha }}
           build-args: |
             NODE_ENV=production
+
+      - name: Deploy to Kubernetes
+        run: |
+          curl -X PUT \
+            -H "content-type: application/json" \
+            -H "Cookie: ${{ secrets.KUBERNETES_AUTH_COOKIE }}" \
+            -d '{"kind":"deployments","namespace":"vrcd-uncategorized","name":"vrcd-home-d5f17b9dc114c7fb","images":{"${{ secrets.DOCKER_REGISTRY }}/build/vrcd-rak-profile":"${{ secrets.DOCKER_REGISTRY }}/build/vrcd-rak-profile:${{ github.sha }}"}}' \
+            "${{ secrets.KUBERNETES_API_URL }}"
